--- a/style.css
+++ b/style.css
@@ -201,8 +201,8 @@ nav a{
 }
 
 nav a:hover{
-    color: #212344;
-    background-color: #21429e;
+    color: #bcd2e0;
+    background-color: #166ea1;
 }
 
 main{
