--- a/comupor.css
+++ b/comupor.css
@@ -169,7 +169,7 @@ main{
     background-color: #ffffff;
     margin: 0 3%;
     border-radius: 50px;
-    border: 27px solid rgb(162 193 172 / 62%);
+    border: 27px solid rgba(128, 197, 229, 0.815);
 }
 
 .section1 {
@@ -177,7 +177,7 @@ main{
     background-color: #ffffff;
     margin: 3%;
     border-radius: 50px;
-    border: 27px solid rgba(213, 229, 218, 0.62);
+    border: 27px solid rgb(212, 232, 240);
 }
 
 
