--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header a {
 
 .nome {
     font-size: 55px;
-    color: #a3d2fd;
+    color: #effbff;
     font-family: "oswald", sans-serif;
 }
 
@@ -237,7 +237,7 @@ footer .boxs {
 }
 
  .boxs h2{
-    color: #b6e6e9;
+    color: #effbff;
     margin-bottom: 20px;
  }
 
