--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ footer .boxs {
 
     .nome {
         font-size: 70px;
-        color: #83e2ff;
+        color: #effbff;
         font-family: "oswald", sans-serif;
     }
 
