--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header a {
     line-height: 40px;
     width: 0;
     transition: .5s;
-    background-color: #1a77ad;
+    background-color: #2091d3;
     border-radius: 92px;
 }
     
