--- a/style.css
+++ b/style.css
@@ -132,10 +132,11 @@ input{
     padding: 0 6%;
 }
 
-.img-casa{
+.img-tec{
     width: 35%;
     float: right;
 }
+
 .img-solu{
     width: 35%;
     float: right;
