--- a/comupor.css
+++ b/comupor.css
@@ -177,7 +177,7 @@ main{
 
 .section {
     padding: 3%;
-    background-color: #639ecf;
+    background-color: #83a5c1;
     margin: 0 3%;
     border-radius: 50px;
     border: 27px solid rgb(8, 108, 155);
