--- a/comupor.css
+++ b/comupor.css
@@ -175,7 +175,7 @@ main{
     background-color: #ffff;
     margin: 0 3%;
     border-radius: 50px;
-    border: 27px solid rgb(8, 108, 155);
+    border: 27px solid rgb(214 227 233);
 }
 
 .section1 {
