--- a/comupor.css
+++ b/comupor.css
@@ -193,6 +193,9 @@ main{
     border: 27px solid rgb(8, 108, 155);
 }
 
+.cominiti{
+    background-color:#bfd8ec;
+}
 
 .quem_somos{
     font-family: "Source Sans 3", sans-serif;
