--- a/comupor.css
+++ b/comupor.css
@@ -339,7 +339,7 @@ main {
 }
 
 .letrinha-pequena1 {
-    color: #000000;
+    color: #ffffff;
     font-size: 17px;
     font-family: "Source Sans 3", sans-serif;
     font-optical-sizing: auto;
