--- a/comupor.css
+++ b/comupor.css
@@ -330,6 +330,7 @@ main {
 }
 
 .letrinha-pequena {
+    color: #ffffff;
     margin: 0 31px;
     font-size: 17px;
     font-family: "Source Sans 3", sans-serif;
