--- a/style.css
+++ b/style.css
@@ -387,4 +387,237 @@ input {
     align-items: center;
 }
 
-.caixa-pesquisa:hover>
+.caixa-pesquisa:hover>.texto-pesqu {
+    width: 240px;
+    padding: 5px 17px;
+}
+
+.menu {
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 336;
+    font-style: normal;
+}
+
+.apresentação {
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 336;
+    font-style: normal;
+    font-size: 35px;
+    padding: 0 6%;
+}
+
+.img-tec {
+    width: 35%;
+    float: right;
+}
+
+.img-tec2 {
+    width: 35%;
+    float: right;
+}
+
+.titulo-principal {
+    margin-top: 7%;
+    padding: 20px 98px;
+    font-size: 66px;
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    background-color: #bfd8ec;
+}
+
+.topico {
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 35px;
+    font-size: 252%;
+    padding: 0 4%;
+    color: #030e04;
+}
+
+.desenvol {
+    font-size: 35px;
+    padding: 0 6%;
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 336;
+    font-style: normal;
+}
+
+.div {
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 365;
+    font-style: normal;
+    font-size: 35px;
+    padding: 2% 5%;
+}
+
+.letrinha-pequena {
+    color: #ffffff;
+    font-size: 25px;
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+}
+
+nav {
+    height: 100%;
+    width: 0px;
+    background-color: #1a77ad;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    overflow: hidden;
+    transition: width 0.3s;
+}
+
+nav a {
+    padding: 20px 0;
+    color: #ffffff;
+    font-size: 25px;
+    display: block;
+    padding: 9px 52px 12px 58px;
+}
+
+nav a:hover {
+    color: #bcd2e0;
+    background-color: #166ea1;
+}
+
+main {
+    padding: 10px;
+    transition: margin-left 0.5s;
+}
+
+footer {
+    min-height: 250px;
+    display: flex;
+    width: 100%;
+    background: #305874;
+    display: flex;
+    flex-direction: row;
+}
+
+footer .boxs {
+    text-align: center;
+    width: 100%;
+    min-height: 150px;
+    padding: 52px;
+    font-size: 32px;
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 336;
+    font-style: normal;
+}
+
+.boxs h2 {
+    color: #effbff;
+    margin-bottom: 20px;
+}
+
+.boxs ul li {
+    margin: 10px 0px;
+    list-style: none;
+}
+
+.boxs ul li a {
+    color: #e5eff7;
+    text-decoration: none;
+}
+
+.boxs ul li a:hover {
+    color: #789cc5;
+}
+
+/* RESPONSIVO - ajustes para telas pequenas (celulares) */
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .nome {
+        padding: 0 50px;
+        font-size: 48px;
+    }
+
+    .marca {
+        width: 100%;
+        padding: 1% 0;
+        top: 0;
+        left: 0;
+    }
+
+    .titulo-principal {
+        font-size: 36px;
+        padding: 20px 30px;
+    }
+
+    .topico {
+        font-size: 28px;
+        padding: 0 10px;
+    }
+
+    .img-tec,
+    .img-tec2 {
+        width: 100%;
+        float: none;
+        margin-top: 20px;
+    }
+
+    .caixa-pesquisa {
+        margin: 0 10px;
+        justify-content: center;
+    }
+
+    .menu {
+        font-size: 18px;
+    }
+
+    footer {
+        flex-direction: column;
+        align-items: center;
+        padding: 20px 0;
+    }
+
+    footer .boxs {
+        padding: 20px;
+    }
+
+    footer .boxs ul li a {
+        font-size: 18px;
+    }
+}
+
+/* Responsivo para telas muito pequenas (celulares mais compactos) */
+@media (max-width: 480px) {
+    .nome {
+        font-size: 36px;
+        padding: 0 20px;
+    }
+
+    .titulo-principal {
+        font-size: 30px;
+        padding: 20px;
+    }
+
+    .topico {
+        font-size: 24px;
+    }
+
+    .letrinha-pequena {
+        font-size: 18px;
+    }
+
+    .caixa-pesquisa:hover>.texto-pesqu {
+        width: 180px;
+    }
+}
