--- a/comupor.css
+++ b/comupor.css
@@ -454,8 +454,8 @@ footer .boxs {
     }
 
     .texto-pesqu {
-        width: 180px !important;
-        padding: 5px 10px !important;
+        width: 180px ;
+        padding: 5px 10px ;
     }
 
     nav a {
