--- a/comupor.css
+++ b/comupor.css
@@ -445,6 +445,12 @@ footer .boxs {
         margin: 0 10px;
         justify-content: center;
     }
+    
+    .caixa-pesquisa:hover>.texto-pesqu {
+    width: 240px;
+    padding: 5px 17px;
+}
+
 
     .menu {
         font-size: 18px;
